--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "expo": "^48.0.0",
+    "expo-background-fetch": "~11.1.1",
+    "expo-clipboard": "^8.0.8",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
+    "expo-notifications": "~0.18.1",
     "expo-print": "~12.2.1",
     "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.0",
+    "expo-task-manager": "~11.1.1",
     "express": "^5.1.0",
     "mongoose": "^9.0.0",
     "react": "18.2.0",
@@ -32,11 +37,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "@react-native-community/netinfo": "9.3.7",
-    "expo-notifications": "~0.18.1",
-    "expo-background-fetch": "~11.1.1",
-    "expo-task-manager": "~11.1.1"
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
