--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@react-navigation/native-stack": "^6.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "expo": "^48.0.0",
+    "expo": "^48.0.21",
     "expo-background-fetch": "~11.1.1",
-    "expo-clipboard": "^8.0.8",
+    "expo-clipboard": "~4.1.2",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
